# historian_downloader

./: .gitignore  .npmrc  README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  pyrightconfig.json
.github/workflows/: release.yml
docs/: architecture.md  rpc-contract.md
python/: README.md  main.py  pyproject.toml  requirements-build.txt
python/adapters/: _oledb.py  base.py  factory.py  mock.py  proficy.py  sqlserver.py
python/rpc/: dispatcher.py  errors.py  transport.py  types.py
python/services/: estimator.py  export_queue.py  segmenter.py  writers.py
python/storage/: db.py
python/storage/migrations/: 001_init.sql
python/tests/: conftest.py  test_build_spec.py  test_crypto.py  test_export_queue.py  test_factory.py  test_mock_adapter.py  test_output_dir.py  test_proficy.py  test_rpc_transport.py  test_saved_server_runtime.py  test_segmenter.py  test_sqlserver.py  test_storage.py  test_storage_crypto.py  test_time.py
python/util/: crypto.py  logging.py  machine_id.py  paths.py  time.py
scripts/: sidecar-smoke-test.mjs  write-python-version.mjs
src/main/: auto-update.ts  index.ts  logger.ts  window.ts
src/main/ipc/: dialog.ts  paths.ts  rpc-bridge.ts  shell.ts
src/main/rpc/: client.ts  errors.ts  line-transport.ts
src/main/sidecar/: resolve-binary.ts  supervisor.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  main.tsx
src/renderer/src/app/: EnvChip.tsx  FooterBar.tsx  (+3 more)
src/shared/: domain-types.ts  error-codes.ts  index.ts  rpc-types.ts
(+41 files in other folders)
